# Students-Hub

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
public/styles/: epub.css
src/: App.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: functions.rs  lib.rs  main.rs
src-tauri/src/buddy_chat/: mod.rs
src-tauri/src/reader/: mod.rs
src-tauri/src/timer/: commands.rs  mod.rs
src/components/: active_state_context.jsx  chatbot.jsx  custom_context_menu.jsx  epub.jsx  pdf.jsx  reader.jsx  sidebar.jsx  timer.jsx  tools.css  tools.jsx  window_controls.jsx
src/components/chatbot/: chatbot.jsx
src/components/common/: active_state_context.jsx  custom_context_menu.jsx  sidebar.css  sidebar.jsx  window_controls.jsx
src/components/reader/: epub.css  epub.jsx  pdf.css  pdf.jsx  reader.jsx
src/components/tools/: timer.jsx  tools.jsx
