[package]
name = "students-hub"
version = "0.0.0"
description = "Utility Apps for Students"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "study_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-prevent-default = "0.4.0"
winrt-notification = "0.5.1"
tauri-plugin-dialog = "2.0.0-rc.0"
font-loader = "0.11.0"
zip = "2.1.6"
regex = "1.10.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0.63"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc.0"
